--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-<h1> whats good mr williams </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Digital Media Production Page 1</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Momo+Trust+Display&display=swap" rel="stylesheet">
+</head>
+<body>
+    <center>
+    <h1>Digital Media Projects</h1>
+    <hr style="width: 90%">
+    <h1>Album Cover</h1>
+    <img src="balbum_bover.jpg" style="width: 50%;">
+    <hr style="width: 30%">
+    <h1>Memory Exercize</h1>
+    <img src="Memory.png" style="width: 50%;">
+    <hr style="width: 30%">
+    <h1>Mood Board (For album cover)</h1>
+    <img src="MoodBoard.png" style="width: 50%;">
+    <hr style="width: 30%">
+    <h1>Wheres Mr Williams 1</h1>
+    <img src="whereswilliams1.jpg" style="width: 50%;">
+    <hr style="width: 30%">
+    <h1>Wheres Mr Williams 2</h1>
+    <img src="whereswilliams1.jpg" style="width: 50%;">
+    <hr style="width: 30%">
+    <h1>Monkey explode</h1>
+    <video width="50%" autoplay loop muted>
+        <source src="0001-0250.mp4" type="video/mp4" />
+        Your browser does not support the video tag.
+    </video>
+    </center>
+</body>
+</html>
