--- a/index.html
+++ b/index.html
@@ -29,10 +29,7 @@
     <img src="whereswilliams2.jpg" style="width: 50%;">
     <hr style="width: 30%">
     <h1>Monkey explode</h1>
-    <video width="50%" autoplay loop muted>
-        <source src="0001-0250.mp4" type="video/mp4" />
-        Your browser does not support the video tag.
-    </video>
+    <img src="explomonkey.gif" style="width: 50%;">
     </center>
 </body>
 </html>
