--- a/index.html
+++ b/index.html
@@ -31,8 +31,18 @@
     <h1>Wheres Mr Williams 3</h1>
     <img src="whereswilliams3.jpg" style="width: 50%;">
     <hr style="width: 30%">
+    <h1>Wheres Mr Williams 4</h1>
+    <img src="whereswilliams4.jpg" style="width: 30%;">
+    <hr style="width: 30%">
     <h1>Monkey explode</h1>
     <img src="explomonkey.gif" style="width: 50%;">
+    <hr style="width: 30%">
+    <h1>boing (unmute the video)</h1>
+    <video width="60%" controls loop autoplay muted>
+        <source src="pong.mp4" type="video/mp4" />
+        Your browser does not support the video tag.
+    </video>
+
     </center>
 </body>
 </html>
